Fix crash due to unsigned integer underflow.  b=100451  r=jag, harishd  sr=waterson